--- a/Views/Sites/Create.cshtml
+++ b/Views/Sites/Create.cshtml
@@ -22,6 +22,7 @@
         <input asp-for="Link" class="form-control"/>
 
         <br />
-        <input type="submit" value="Create" class="btn bg-white"/>
+        <input type="submit" value="Create" class="btn btn-success"/>
+        <a asp-action="Index" class="btn bg-white">Back to Home</a>
     </form>
 </div>
