--- a/Views/Sites/Index.cshtml
+++ b/Views/Sites/Index.cshtml
@@ -43,8 +43,7 @@
 
     @* Redirect to service pages using the controller *@
     <ul>
-        <a class="btn bg-white" asp-action="Create">Create</a>
-        <a class="btn bg-white" asp-action="Edit">Edit</a>
-        <a class="btn btn-danger" asp-action="Delete">Delete</a>
+        <a class="btn bg-white" asp-action="Create">New Reference</a>
+        <a class="btn bg-white" asp-action="Details">Details</a>
     </ul>
 </section>
