--- a/Views/Sites/Delete.cshtml
+++ b/Views/Sites/Delete.cshtml
@@ -27,13 +27,15 @@
             @Html.DisplayNameFor(model => model.Link)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Link)
+            <a href="@Html.DisplayFor(model => model.Link)" target="_blank">
+                @Html.DisplayFor(model => model.Name)
+            </a>
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Details" class="btn bg-white">Back to details</a>
     </form>
 </div>
