--- a/Views/Sites/Create.cshtml
+++ b/Views/Sites/Create.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h4>Sites</h4>
 <hr />
@@ -23,6 +23,6 @@
 
         <br />
         <input type="submit" value="Create" class="btn btn-success"/>
-        <a asp-action="Index" class="btn bg-white">Back to Home</a>
+        <a asp-action="Index" class="btn bg-white">Cancel</a>
     </form>
 </div>
