--- a/Views/Sites/Delete.cshtml
+++ b/Views/Sites/Delete.cshtml
@@ -36,6 +36,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Details" class="btn bg-white">Back to details</a>
+        <a asp-action="Details" class="btn bg-white">Cancel</a>
     </form>
 </div>
