--- a/Views/Sites/Details.cshtml
+++ b/Views/Sites/Details.cshtml
@@ -9,8 +9,9 @@
 <div>
     <h4>Sites</h4>
     <hr />
-    <p>
-        <a asp-action="Create" class="btn bg-white">New Reference</a>
+    <div>
+        <a asp-action="Create" class="btn btn-success">New Reference</a>
+        <a asp-action="Index" class="btn bg-white">Back to Home</a>
     </p>
     <table class="table table-striped table-hover bg-light">
         <tr>
@@ -36,8 +37,4 @@
             </tr>
         }
     </table>
-</div>
-
-<div>
-    <a asp-action="Index" class="btn bg-white">Back to Home</a>
 </div>
