--- a/Views/Sites/Edit.cshtml
+++ b/Views/Sites/Edit.cshtml
@@ -31,7 +31,7 @@
             <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-success" />
-                <a asp-action="Details" class="btn bg-white">Back to details</a>
+                <a asp-action="Details" class="btn bg-white">Cancel</a>
             </div>
         </form>
     </div>
