--- a/Views/DTPs/Delete.cshtml
+++ b/Views/DTPs/Delete.cshtml
@@ -25,11 +25,29 @@
         <dd class="col-sm-10">
             @Model.GetFullName()
         </dd>
+        <dt class="col-sm-2">
+            Analyst:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Analyst
+        </dd>
+        <dt class="col-sm-2">
+            Leader:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Leader
+        </dd>
+        <dt class="col-sm-2">
+            Demandant:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Demandant
+        </dd>
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id"/>
-        <input type="submit" value="Delete" class="btn btn-danger"/>
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-action="Index" class="btn bg-white">Cancel</a>
     </form>
 </div>
