--- a/Views/DTPs/Details.cshtml
+++ b/Views/DTPs/Details.cshtml
@@ -12,7 +12,32 @@
 
 <div>
     <h4>@Model.GetFullName()</h4>
-    <p>Project page: <a href="@Model.GetProjectPageLink()" target="_blank">DTP.@Model.Number</a></p>
+    <dl class="row">
+        <dt class="col-sm-2">
+            Project page:
+        </dt>
+        <dd class="col-sm-10">
+            <a href="@Model.GetProjectPageLink()" target="_blank">DTP.@Html.DisplayFor(model => model.Number)</a>
+        </dd>
+        <dt class="col-sm-2">
+            Analyst:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Analyst
+        </dd>
+        <dt class="col-sm-2">
+            Leader:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Leader
+        </dd>
+        <dt class="col-sm-2">
+            Demandant:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Demandant
+        </dd>
+    </dl>
 </div>
 
 <div>
