Error pages for DTPs

--- a/Views/DTPs/Details.cshtml
+++ b/Views/DTPs/Details.cshtml
@@ -41,5 +41,5 @@
 </div>
 
 <div>
-    <a asp-action="Index" class="btn bg-white">Return to DTPs</a>
+    <a asp-action="Index" class="btn bg-white">Return</a>
 </div>
