--- a/Views/Sites/Details.cshtml
+++ b/Views/Sites/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <div>
         <a asp-action="Create" class="btn btn-success">New Reference</a>
-        <a asp-action="Index" class="btn bg-white">Back to Home</a>
+        <a asp-action="Index" class="btn bg-white">Return</a>
     </p>
     <table class="table table-striped table-hover bg-light">
         <tr>
