--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DTP.styles.css" asp-append-version="true" />
 </head>
-<body class="text-white"style="font-family: Helvetica; background-color: #002133;">
+<body class="text-white" style="font-family: Helvetica; background-color: #002133;">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Sites" asp-action="Index">
-                    <img src="~/images/logo.png" style="width: 32px; height: 32px"/>
+                    <img src="~/images/logo.png" style="width: 32px; height: 32px" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -26,6 +26,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DTPs" asp-action="Index">DTPs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RDMs" asp-action="Index">RDMs</a>
                         </li>
                     </ul>
                 </div>
