--- a/Views/RDMs/Index.cshtml
+++ b/Views/RDMs/Index.cshtml
@@ -9,46 +9,46 @@
 <br />
 
 <table class="table table-striped table-hover bg-light">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Number</th>
-            <th>Ticket</th>
-            <th>Required To</th>
-        </tr>
-    </thead>
+
+    <tr>
+        <th>Id</th>
+        <th>Number</th>
+        <th>Ticket</th>
+        <th>Required To</th>
+    </tr>
+
     @foreach (var item in Model.ParentRDMs)
     {
-        <tbody>
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.GetNumber()</td>
-                <td>@item.Ticket</td>
-                <td>@item.RequiredTo</td>
-            </tr>
-        </tbody>
+
+        <tr>
+            <td>@item.Id</td>
+            <td>@item.Number</td>
+            <td>@item.Ticket</td>
+            <td>@item.RequiredTo</td>
+        </tr>
+
     }
 </table>
 
 <table class="table table-striped table-hover bg-light">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Number</th>
-            <th>Ticket</th>
-            <th>Required To</th>
-        </tr>
-    </thead>
+
+    <tr>
+        <th>Id</th>
+        <th>Number</th>
+        <th>Ticket</th>
+        <th>Required To</th>
+    </tr>
+
 
     @foreach (var item in Model.ChildrenRDMs)
     {
-        <tbody>
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.GetNumber()</td>
-                <td>@item.Ticket</td>
-                <td>@item.RequiredTo</td>
-            </tr>
-        </tbody>
+
+        <tr>
+            <td>@item.Id</td>
+            <td>@item.Number</td>
+            <td>@item.Ticket</td>
+            <td>@item.RequiredTo</td>
+        </tr>
+
     }
 </table>
