--- a/Views/DTPs/Details.cshtml
+++ b/Views/DTPs/Details.cshtml
@@ -40,6 +40,51 @@
     </dl>
 </div>
 
+<br />
+
+<div>
+    @foreach (var ParentRDM in Model.ParentRDMs)
+    {
+        <div>
+            <h4>RDM @ParentRDM.Number - @ParentRDM.Summary</h4>
+
+            <table class="table table-striped table-hover bg-light">
+                <tr>
+                    <th>@Html.DisplayNameFor(model => ParentRDM.Number)</th>
+                    <th>@Html.DisplayNameFor(model => ParentRDM.Summary)</th>
+                    <th>@Html.DisplayNameFor(model => ParentRDM.User)</th>
+                    <th>@Html.DisplayNameFor(model => ParentRDM.Requester)</th>
+                    <th>@Html.DisplayNameFor(model => ParentRDM.Type)</th>
+                    <th>@Html.DisplayNameFor(model => ParentRDM.RequiredTo)</th>
+                    <th>Configure</th>
+                </tr>
+
+                @foreach (var Child in ParentRDM.Children)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => ParentRDM.Number)</td>
+                        <td>@Html.DisplayFor(modelItem => ParentRDM.Summary)</td>
+                        <td>@Html.DisplayFor(modelItem => ParentRDM.User)</td>
+                        <td>@Html.DisplayFor(modelItem => ParentRDM.Requester)</td>
+                        <td>@Html.DisplayFor(modelItem => ParentRDM.Type)</td>
+                        <td>@Html.DisplayFor(modelItem => ParentRDM.RequiredTo)</td>
+                        <td>
+                            <a asp-action="" asp-area="" class="btn btn-outline-success">Edit</a>
+                            <a asp-action="" asp-area="" class="btn btn-outline-primary">Details</a>
+                            <a asp-action="" asp-area="" class="btn btn-outline-danger">Delete</a>
+                        </td>
+                    </tr>
+                }
+
+                <tr>
+                    <td><a asp-action="" asp-area="">New RDM</a></td>
+                </tr>
+            </table>
+        </div>
+        <br />
+    }
+</div>
+
 <div>
     <a asp-action="Index" class="btn bg-white">Return</a>
 </div>
