--- a/Views/RDMs/DeleteParent.cshtml
+++ b/Views/RDMs/DeleteParent.cshtml
@@ -1,15 +1,8 @@
-﻿@model DTP.Models.ChildrenRDM;
+﻿@model DTP.Models.ParentRDM;
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Parent";
 }
-
-<h1>@ViewData["Title"]</h1>
-<h3>Are you sure you want to delete this?</h3>
-<br />
-
-<h2>RDM @Model.Number</h2>
-<hr />
 
 <style>
     .form-row {
@@ -22,6 +15,14 @@
             width: 300px;
         }
 </style>
+
+<h1>@ViewData["Title"]</h1>
+<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">This action will delete any associated children</h3>
+<br />
+
+<h2>RDM @Model.Number</h2>
+<hr />
 
 <div>
     <div class="form-row">
@@ -79,14 +80,14 @@
 
         <div>
             <label asp-for="@Model.OpenDate" class="control-label"></label>
-            <input asp-for="@Model.OpenDate" readonly class="form-control" />
+            <input asp-for="@Model.OpenDate" readonly class="form-control"/>
         </div>
     </div>
 
     <br />
 </div>
 
-<form asp-action="Delete">
+<form asp-action="DeleteParent">
     <input type="hidden" asp-for="Id" />
     <input type="submit" value="Delete" class="btn btn-danger" />
     <a asp-action="Details" asp-controller="DTPs" asp-route-id="@Model.Ticket.Id" class="btn bg-white">Cancel</a>
