Code structure changes

--- a/Views/DTPs/Details.cshtml
+++ b/Views/DTPs/Details.cshtml
@@ -44,7 +44,7 @@
 
 <div class="d-flex justify-content-between">
     <h2>RDMs</h2>
-    <a asp-action="CreateParent" asp-controller="RDMs" asp-route-dtpId="@Model.Id" class="btn btn-success">New parent RDM</a>
+    <a asp-action="Create" asp-controller="ParentRDM" asp-route-dtpId="@Model.Id" class="btn btn-success">New parent RDM</a>
 </div>
 <hr />
 <br />
@@ -56,9 +56,9 @@
             <div class="d-flex justify-content-between">
                 <h4>RDM @ParentRDM.Number - @ParentRDM.Summary</h4>
                 <div>
-                    <a asp-action="EditParent" asp-controller="RDMs" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-success">Edit</a>
-                    <a asp-action="DetailsParent" asp-controller="RDMs" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-primary">Details</a>
-                    <a asp-action="DeleteParent" asp-controller="RDMs" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-danger">Delete</a>
+                    <a asp-action="Edit" asp-controller="ParentRDM" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-success">Edit</a>
+                    <a asp-action="Details" asp-controller="ParentRDM" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-primary">Details</a>
+                    <a asp-action="Delete" asp-controller="ParentRDM" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-danger">Delete</a>
                 </div>
             </div>
 
@@ -83,15 +83,15 @@
                         <td>@Html.DisplayFor(modelItem => Child.Type)</td>
                         <td>@Html.DisplayFor(modelItem => Child.RequiredTo)</td>
                         <td>
-                            <a asp-action="EditChild" asp-controller="RDMs" asp-route-dtpId="@Model.Id" asp-route-childId="@Child.Id" class="btn btn-outline-success">Edit</a>
-                            <a asp-action="DetailsChild" asp-controller="RDMs" asp-route-dtpId="@Model.Id" asp-route-childId="@Child.Id" class="btn btn-outline-primary">Details</a>
-                            <a asp-action="DeleteChild" asp-controller="RDMs" asp-route-dtpId="@Model.Id" asp-route-childId="@Child.Id" class="btn btn-outline-danger">Delete</a>
+                            <a asp-action="Edit" asp-controller="ChildRDM" asp-route-dtpId="@Model.Id" asp-route-childId="@Child.Id" class="btn btn-outline-success">Edit</a>
+                            <a asp-action="Details" asp-controller="ChildRDM" asp-route-dtpId="@Model.Id" asp-route-childId="@Child.Id" class="btn btn-outline-primary">Details</a>
+                            <a asp-action="Delete" asp-controller="ChildRDM" asp-route-dtpId="@Model.Id" asp-route-childId="@Child.Id" class="btn btn-outline-danger">Delete</a>
                         </td>
                     </tr>
                 }
 
                 <tr>
-                    <td><a asp-action="CreateChild" asp-controller="RDMs" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-success">New RDM</a></td>
+                    <td><a asp-action="Create" asp-controller="ChildRDM" asp-route-dtpId="@Model.Id" asp-route-parentId="@ParentRDM.Id" class="btn btn-success">New RDM</a></td>
                 </tr>
             </table>
         </div>
