--- a/Views/ParentRDM/Create.cshtml
+++ b/Views/ParentRDM/Create.cshtml
@@ -23,7 +23,7 @@
 <hr />
 
 <div>
-    <form asp-action="CreateAssociated">
+    <form asp-action="Create">
         <div class="form-row">
             <div>
                 <label asp-for="Parent.Number" class="control-label"></label>
