--- a/Views/ParentRDM/Delete.cshtml
+++ b/Views/ParentRDM/Delete.cshtml
@@ -18,7 +18,6 @@
 
 <h1>@ViewData["Title"]</h1>
 <h3>Are you sure you want to delete this?</h3>
-<h3 class="text-danger">This action will delete any associated children</h3>
 <br />
 
 <h2>RDM @Model.Number</h2>
@@ -87,7 +86,7 @@
     <br />
 </div>
 
-<form asp-action="DeleteParent">
+<form asp-action="Delete">
     <input type="hidden" asp-for="Id" />
     <input type="submit" value="Delete" class="btn btn-danger" />
     <a asp-action="Details" asp-controller="DTPs" asp-route-id="@Model.Ticket.Id" class="btn bg-white">Cancel</a>
