Deleting a parent RDM now deletes all associated children

--- a/Views/ParentRDM/Delete.cshtml
+++ b/Views/ParentRDM/Delete.cshtml
@@ -17,7 +17,8 @@
 </style>
 
 <h1>@ViewData["Title"]</h1>
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this?</h3>
+<h3 class="text-danger">All children associated will be deleted</h3>
 <br />
 
 <h2>RDM @Model.Number</h2>
